--- a/Maleev_V_A_ISEbd21/App.config
+++ b/Maleev_V_A_ISEbd21/App.config
@@ -11,7 +11,7 @@
     <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <targets>
- <target name="logfile" xsi:type="File" fileName="C://file.txt" />
+ <target name="logfile" xsi:type="File" fileName="D://file.txt" />
  </targets>
  <rules>
  <logger name="*" minlevel="Info" writeTo="logfile" />
