--- a/Maleev_V_A_ISEbd21/Maleev_V_A_ISEbd21.csproj
+++ b/Maleev_V_A_ISEbd21/Maleev_V_A_ISEbd21.csproj
@@ -48,11 +48,11 @@
   <ItemGroup>
     <Compile Include="Benzovoz.cs" />
     <Compile Include="Direction.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormBenzovoz.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormBenzovoz.Designer.cs">
+      <DependentUpon>FormBenzovoz.cs</DependentUpon>
     </Compile>
     <Compile Include="FormParking.cs">
       <SubType>Form</SubType>
@@ -67,8 +67,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Truck.cs" />
     <Compile Include="Vehicle.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormBenzovoz.resx">
+      <DependentUpon>FormBenzovoz.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormParking.resx">
       <DependentUpon>FormParking.cs</DependentUpon>
