--- a/Maleev_V_A_ISEbd21/Maleev_V_A_ISEbd21.csproj
+++ b/Maleev_V_A_ISEbd21/Maleev_V_A_ISEbd21.csproj
@@ -48,11 +48,23 @@
   <ItemGroup>
     <Compile Include="Benzovoz.cs" />
     <Compile Include="Direction.cs" />
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormParking.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormParking.Designer.cs">
       <DependentUpon>FormParking.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormTruckConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTruckConfig.Designer.cs">
+      <DependentUpon>FormTruckConfig.cs</DependentUpon>
     </Compile>
     <Compile Include="Itest.cs" />
     <Compile Include="MultiLevelParking.cs" />
@@ -61,8 +73,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Truck.cs" />
     <Compile Include="Vehicle.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormParking.resx">
       <DependentUpon>FormParking.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTruckConfig.resx">
+      <DependentUpon>FormTruckConfig.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
